# Axim-cli

./: INSTALL.md  LICENSE  README.md  README_DIST.md
axim-sdk/: README.md  __init__.py  pyproject.toml  requirements.txt  run_cli.py
axim-sdk/axim_sdk/: __init__.py  agent.py  cli.py  memory.py  multimodal.py  shell.py  turboquant.py
axim-sdk/axim_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
axim-sdk/axim_sdk/py312/axim_sdk/: shell.py  turboquant.py
axim-sdk/axim_sdk/py313/axim_sdk/: __init__.py  agent.py  cli.py  memory.py  multimodal.py  shell.py  turboquant.py
axim-sdk/axim_sdk/py313/pyarmor_runtime_000000/: __init__.py
axim-sdk/axim_sdk/tools/: bash.py  predictor.py
axim-sdk/py310/axim_sdk/: __init__.py  agent.py  cli.py  memory.py  multimodal.py  shell.py  turboquant.py
axim-sdk/py310/axim_sdk/tools/: bash.py  predictor.py
axim-sdk/py310/pyarmor_runtime_000000/: __init__.py
axim-sdk/py311/axim_sdk/: __init__.py  agent.py  cli.py  memory.py  multimodal.py  shell.py  turboquant.py
axim-sdk/py311/axim_sdk/tools/: bash.py  (+1 more)
axim-sdk/py311/pyarmor_runtime_000000/: __init__.py
axim-sdk/py312/axim_sdk/: __init__.py  agent.py  cli.py  memory.py  multimodal.py  shell.py  turboquant.py
axim-sdk/py312/pyarmor_runtime_000000/: __init__.py
axim-sdk/py313/axim_sdk/: __init__.py  agent.py  cli.py  memory.py  multimodal.py  shell.py  turboquant.py
axim-sdk/py313/pyarmor_runtime_000000/: __init__.py
axim-sdk/pyarmor_runtime_000000/: __init__.py
axim-sdk/pyarmor_runtime_000000/windows_x86_64/: pyarmor_runtime.pyd
(+26 files in other folders)
