[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axim-sdk"
version = "0.1.0"
description = "Axim Python SDK"
authors = [{ name = "Axim", email = "example@example.com" }]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "pydantic>=2",
    "typing-extensions>=4.8",
    "requests>=2.31",
    "mistralai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["axim_sdk", "axim_sdk.*"]

[project.scripts]
axim = "axim_sdk.cli:main"
